# PureSpace

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  sonar-project.properties
.github/workflows/: test-action.yml
doc/: Activity_diagram  Network_diagram  Systems_order_diagram
ext/: entt.hpp
res/shaders/: fragment.frag  vertex.vert
src/: app.hpp  exception.hpp  factories.hpp  frame_clock.hpp  game.hpp  game_constants.hpp  graphics.hpp  intersection.hpp  shader_program.hpp  systems.hpp
tests/: CMakeLists.txt  collision_test.hpp  graphics_test.hpp  main.cpp  shader_test.hpp  testdoc.md
